syntax = "proto3";
package exocore.reward.v1beta1;


option (gogoproto.goproto_getters_all) = false;

// GenesisState represents the genesis state
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];

  repeated Pool pools = 2 [ (gogoproto.nullable) = false ];
}
